# Projet_Deep_Learning_4A

./: .gitignore  README.md  pyproject.toml
Kaggle/: book.py  clean_reviews.py  sent_analysis.ipynb  sentiment.ipynb  sentiment_analysis.ipynb
Models/Conventional_Neural_Network/: main.py
