[tool.poetry]
name = "projet-deep-learning-4a"
version = "0.1.0"
description = ""
authors = ["Daniel Alexander Muro <60529405+dalexmuro@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "projet_deep_learning_4a"}]

[tool.poetry.dependencies]
python = "3.10.7"
pandas = "^1.5.1"
matplotlib = "^3.6.2"
scikit-learn = "^1.1.3"
numpy = "^1.23.4"
keras = "^2.10.0"
tensorflow = "^2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
