[tool.poetry]
name = "projet-deep-learning-4a"
version = "0.1.0"
description = ""
authors = ["Daniel Muro, Ariel Azerad, Jeffrey Singarayar"]
readme = "README.md"
repository = "https://github.com/Ariel2107/Projet_Deep_Learning_4A"
packages = [{include = "Kaggle"}]

[tool.poetry.dependencies]
python = "3.10.7 || 3.9.13 || 3.10.1"
pandas = "^1.5.1"
matplotlib = "^3.6.2"
scikit-learn = "^1.1.3"
numpy = "^1.23.4"
keras = "^2.10.0"
tensorflow = "^2.10.0"
nltk = "^3.7"
mgzip = "^0.2.1"
contractions = "^0.1.73"
notebook = "^6.5.2"
jupyter = "^1.0.0"
textblob = "^0.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
clean_df = "Kaggle.clean_reviews:main"